# rme

./: CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/workflows/: build-windows.yml
data/: clients.xml
data/1287/: tilesets.xml  walls.xml
source/: materials.cpp
